--- a/test-timing-functions.html
+++ b/test-timing-functions.html
@@ -17,78 +17,44 @@ limitations under the License.
 <!DOCTYPE html>
 <style>
 .anim {
-  left: 50px;
-  width: 100px;
-  height: 50px;
+  left: 0px;
+  width: 200px;
+  height: 24px;
   background-color: lightsteelblue;
-  position: absolute;
-}
-
-#a {
-  top: 0px
-}
-
-#b {
-  top: 50px;
-}
-
-#c {
-  top: 100px;
-}
-
-#d {
-  top: 150px;
-}
-
-#e {
-  top: 200px;
-}
-
-#f {
-  top: 250px;
-}
-
-#g {
-  top: 300px;
-}
-
-#h {
-  top: 350px;
+  position: relative;
+  border-bottom: solid white 1px;
 }
 
 #expectation {
   position: absolute;
-  top: 0px;
   left: 200px;
-  width: 100px;
-  height: 400px;
+  width: 200px;
+  height: 200px;
   background: red;
 }
+body { margin: 0px; }
 </style>
 
 <div id=expectation></div>
 
 <div>
-  <div id="a" class="anim"></div>
-  <div id="b" class="anim"></div>
-  <div id="c" class="anim"></div>
-  <div id="d" class="anim"></div>
-  <div id="e" class="anim"></div>
-  <div id="f" class="anim"></div>
-  <div id="g" class="anim"></div>
-  <div id="h" class="anim"></div>
+  <div id="a" class="anim">(default)</div>
+  <div class="anim test">ease-in</div>
+  <div class="anim test">ease-out</div>
+  <div class="anim test">cubic-bezier(0, 0.2, 0.8, 1)</div>
+  <div class="anim test">steps(3, start)</div>
+  <div class="anim test">steps(3, middle)</div>
+  <div class="anim test">steps(3, end)</div>
+  <div class="anim test">cubic-bezier(0.5, -1.5, 0.5, 2.5)</div>
 </div>
 
 <script src="web-animation.js"></script>
 <script>
 
 new Animation(document.querySelector("#a"), {left: "200px"}, {startDelay: 1, duration: 2});
-new Animation(document.querySelector("#b"), {left: "200px"}, {startDelay: 1, duration: 2, timingFunction: "ease-in"});
-new Animation(document.querySelector("#c"), {left: "200px"}, {startDelay: 1, duration: 2, timingFunction: "ease-out"});
-new Animation(document.querySelector("#d"), {left: "200px"}, {startDelay: 1, duration: 2, timingFunction: "cubic-bezier(0, 0.2, 0.8, 1)"});
-new Animation(document.querySelector("#e"), {left: "200px"}, {startDelay: 1, duration: 2, timingFunction: "steps(3, start)"});
-new Animation(document.querySelector("#f"), {left: "200px"}, {startDelay: 1, duration: 2, timingFunction: "steps(3, middle)"});
-new Animation(document.querySelector("#g"), {left: "200px"}, {startDelay: 1, duration: 2, timingFunction: "steps(3, end)"});
-new Animation(document.querySelector("#h"), {left: "200px"}, {startDelay: 1, duration: 2, timingFunction: "cubic-bezier(0.5, -1.5, 0.5, 2.5)"});
-
+var elems = document.querySelectorAll(".test");
+for (var i = 0; i < elems.length; i++) {
+  var element = elems[i];
+  new Animation(element, {left: "200px"}, {startDelay: 1, duration: 2, timingFunction: element.textContent});
+}
 </script>
