--- a/demo_example.html
+++ b/demo_example.html
@@ -15,6 +15,7 @@ limitations under the License.
 -->
 
 <!DOCTYPE html>
+
 <style>
 .scene {
   position: absolute;
@@ -89,18 +90,6 @@ div#links {
   <div class="picture" id="picture"></div>
 </div>
 
-<div class="scene right">
-  <div class="doorContainer" left="50">
-    <div class="doorSpacer">
-      <div class="door">
-      &nbsp;o
-      </div>
-    </div>
-  </div>
-  <div class="dust"></div>
-  <div class="picture"></div>
-</div>
-
 <svg height="400px">
   <circle cx="100px" cy="100px" r="20px"/>
   <circle cx="200px" cy="120px" r="15px"/>
@@ -118,9 +107,6 @@ div#links {
   <a href="#" onclick="sixth()">sixth</a>
   <a href="#" onclick="seventh()">seventh</a>
   <a href="#" onclick="eighth()">eighth</a>
-  <a href="#" onclick="ninth()">ninth</a>
-  <a href="#" onclick="tenth()">tenth</a>
-  <a href="#" onclick="eleventh()">eleventh</a>
 </div>
 
 <script src="web-animation.js"></script>
@@ -136,8 +122,8 @@ function first() {
 }
 
 function second() {
-  (new AnimationTemplate({ cx: '400px' }, 3))
-    .animate(document.querySelectorAll("circle"));
+  new Animation(document.querySelector("circle"),
+    { cx: '400px' }, 3);
 }
 
 // STEP 2
@@ -201,30 +187,8 @@ function seventh() {
 // STEP 5
 
 function eighth() {
-  document.querySelector(".right").style["visibility"] = "visible"
-}
-
-var template = undefined;
-var door2 = undefined;
-
-function ninth() {
-  template = group.templatize();
-
-  template.children[0].children[0].resolutionStrategy = "selector: .doorSpacer";
-  template.children[1].children[0].resolutionStrategy = "selector: .picture";
-  template.children[1].children[1].resolutionStrategy = "selector: .dust";
-  door2 = template.animateLive(document.querySelector(".right"));
-}
-
-function tenth() {
+  group.timing.playbackRate = 2;
   group.play();
-  door2.play();
-}
-
-function eleventh() {
-  template.timing.playbackRate = 2;
-  group.play();
-  door2.play();
 }
 </script>
 <script src="web-animation-visualization.js"></script>
