--- a/web-animation-test.html
+++ b/web-animation-test.html
@@ -14,7 +14,10 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
+<!-- TODO: Rewrite to avoid templates. -->
+
 <!DOCTYPE html>
+
 <style>
 .anim {
 	top: 0px;
