Remove concept of pausing
Removing this now will simplify the transition to the new Player model. A
simplified pause funcitonality will later be added to Player.

--- a/test/testcases/test-bounds.html
+++ b/test/testcases/test-bounds.html
@@ -61,6 +61,9 @@ var check = function(actual, expected, failureMessage) {
 
 var animFunc = {left: ["100px", "200px"]};
 
+/*
+TODO: Reinstate pause functionality.
+
 // Test that the animation interval uses inclusive start and end bounds.
 var elem1 = document.getElementById("anim1");
 var anim1 = new Animation(elem1, animFunc, 1.0);
@@ -95,5 +98,6 @@ setTimeout(function() {
     }, 100);
   }, 100);
 }, 100);
+*/
 
 </script>
