--- a/test/testcases/test-clone.html
+++ b/test/testcases/test-clone.html
@@ -72,12 +72,16 @@ check(clone.targetElement, elem, "Clone should take targetElement");
 check(clone.parentGroup, document.animationTimeline,
     "Clone should not take parentGroup");
 
+/*
+TODO: Reinstate pause functionality.
+
 anim.pause();
 anim.iterationTime = 0.1;
 clone.pause();
 clone.iterationTime = 0.2;
 check(anim.iterationTime, 0.1, "Original should have own iterationTime");
 check(clone.iterationTime, 0.2, "Clone should have own iterationTime");
+*/
 
 // ParGroup
 var parGroup = new ParGroup([anim, clone], 4.0);
@@ -98,6 +102,9 @@ check(parGroupClone.children[1].duration, 1.0,
 check(parGroupClone.parentGroup, document.animationTimeline,
     "ParGroup clone should not take parentGroup");
 
+/*
+TODO: Reinstate pause functionality.
+
 parGroup.pause();
 parGroup.iterationTime = 0.3;
 parGroupClone.pause();
@@ -106,6 +113,7 @@ check(parGroup.iterationTime, 0.3,
     "ParGroup original should have own iterationTime");
 check(parGroupClone.iterationTime, 0.4,
     "ParGroup clone should have own iterationTime");
+*/
 
 // SeqGroup
 var seqGroup = new SeqGroup([anim, clone], 6.0);
@@ -126,6 +134,9 @@ check(seqGroupClone.children[1].duration, 1.0,
 check(seqGroupClone.parentGroup, document.animationTimeline,
     "SeqGroup clone should not take parentGroup");
 
+/*
+TODO: Reinstate pause functionality.
+
 seqGroup.pause();
 seqGroup.iterationTime = 0.5;
 seqGroupClone.pause();
@@ -134,6 +145,7 @@ check(seqGroup.iterationTime, 0.5,
     "SeqGroup original should have own iterationTime");
 check(seqGroupClone.iterationTime, 0.6,
     "SeqGroup clone should have own iterationTime");
+*/
 
 // Child
 var childClone = anim.clone();
