Remove concept of pausing
Removing this now will simplify the transition to TimeSources. A simplified
pause funcitonality will later be added to TimeSource. Also remove superfluous
TimedItem._timeDrift.

--- a/test/testcases/test-clone.html
+++ b/test/testcases/test-clone.html
@@ -73,12 +73,16 @@ checkNotEqual(clone.startTime, 2.0, "Clone should not take startTime");
 check(clone.parentGroup, document.animationTimeline,
     "Clone should not take parentGroup");
 
+/*
+TODO: Reinstate pause functionality.
+
 anim.pause();
 anim.iterationTime = 0.1;
 clone.pause();
 clone.iterationTime = 0.2;
 check(anim.iterationTime, 0.1, "Original should have own iterationTime");
 check(clone.iterationTime, 0.2, "Clone should have own iterationTime");
+*/
 
 // ParGroup
 var parGroup = new ParGroup([anim, clone], 4.0, null, 3.0);
@@ -101,6 +105,9 @@ checkNotEqual(parGroupClone.startTime, 3.0,
 check(parGroupClone.parentGroup, document.animationTimeline,
     "ParGroup clone should not take parentGroup");
 
+/*
+TODO: Reinstate pause functionality.
+
 parGroup.pause();
 parGroup.iterationTime = 0.3;
 parGroupClone.pause();
@@ -109,6 +116,7 @@ check(parGroup.iterationTime, 0.3,
     "ParGroup original should have own iterationTime");
 check(parGroupClone.iterationTime, 0.4,
     "ParGroup clone should have own iterationTime");
+*/
 
 // SeqGroup
 var seqGroup = new SeqGroup([anim, clone], 6.0, null, 5.0);
@@ -131,6 +139,9 @@ checkNotEqual(seqGroupClone.startTime, 5.0,
 check(seqGroupClone.parentGroup, document.animationTimeline,
     "SeqGroup clone should not take parentGroup");
 
+/*
+TODO: Reinstate pause functionality.
+
 seqGroup.pause();
 seqGroup.iterationTime = 0.5;
 seqGroupClone.pause();
@@ -139,6 +150,7 @@ check(seqGroup.iterationTime, 0.5,
     "SeqGroup original should have own iterationTime");
 check(seqGroupClone.iterationTime, 0.6,
     "SeqGroup clone should have own iterationTime");
+*/
 
 // Child
 var childClone = anim.clone();
