--- a/demo_example.html
+++ b/demo_example.html
@@ -17,93 +17,111 @@ limitations under the License.
 <!DOCTYPE html>
 <style>
 .scene {
-	position: absolute;
-	left: 50px;
+  position: absolute;
+  left: 50px;
 }
 
 .door {
-
-	background-color: gray;
-	border: 1px solid black;
-	line-height: 200px;
-	width: 100px;
+  background-color: gray;
+  border: 1px solid black;
+  line-height: 200px;
+  width: 100px;
 }
 
 .doorSpacer {
-	width: 200px;
-	-webkit-transform: rotateY(0deg);
-	-webkit-transform-style: preserve-3d;
+  width: 200px;
+  -webkit-transform: rotateY(0deg);
+  -webkit-transform-style: preserve-3d;
 }
 
 .doorContainer {
-	-webkit-transform-style: preserve-3d;
-	-webkit-perspective: 1000px;
-	top: 50px;
-	width: 200px;
-	height: 200px;
-	position: absolute;
-	-webkit-perspective-origin: right center;
+  -webkit-transform-style: preserve-3d;
+  -webkit-perspective: 1000px;
+  top: 50px;
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  -webkit-perspective-origin: right center;
 }
 
 .right {
-	left: 450px;
-	visibility: hidden;
+  left: 450px;
+  visibility: hidden;
 }
 
 .picture {
-	position: absolute;
-	left: 150px;
-	top: 70px;
-	width: 100px;
-	height: 75px;
-	border: solid 1px black;
-	-webkit-transform: rotate(0deg);
+  position: absolute;
+  left: 150px;
+  top: 70px;
+  width: 100px;
+  height: 75px;
+  border: solid 1px black;
+  -webkit-transform: rotate(0deg);
 }
 
 .dust {
-	position: absolute;
-	left: -25px;
-	width: 150px;
-	border-radius: 15px;
-	height: 30px;
-	top: 230px;
-	background-color: #555;
-	opacity: 0;
+  position: absolute;
+  left: -25px;
+  width: 150px;
+  border-radius: 15px;
+  height: 30px;
+  top: 230px;
+  background-color: #555;
+  opacity: 0;
+}
+
+div#links {
+  margin: 30px;
 }
 
 </style>
 
 <div class="scene">
-	<div class="doorContainer">
-		<div class="doorSpacer" id="door">
-			<div class="door">
-			&nbsp;o
-			</div>
-		</div>
-	</div>
-	<div class="dust" id="dust"></div>
+  <div class="doorContainer">
+    <div class="doorSpacer" id="door">
+      <div class="door">
+      &nbsp;o
+      </div>
+    </div>
+  </div>
+  <div class="dust" id="dust"></div>
 
-	<div class="picture" id="picture"></div>
+  <div class="picture" id="picture"></div>
 </div>
 
 <div class="scene right">
-	<div class="doorContainer" left="50">
-		<div class="doorSpacer">
-			<div class="door">
-			&nbsp;o
-			</div>
-		</div>
-	</div>
-	<div class="dust"></div>
-	<div class="picture"></div>
+  <div class="doorContainer" left="50">
+    <div class="doorSpacer">
+      <div class="door">
+      &nbsp;o
+      </div>
+    </div>
+  </div>
+  <div class="dust"></div>
+  <div class="picture"></div>
 </div>
 
 <svg height="400px">
-	<circle cx="100px" cy="100px" r="20px"/>
-	<circle cx="200px" cy="120px" r="15px"/>
-	<circle cx="130px" cy="315px" r="25px"/>
-	<circle cx="220px" cy="300px" r="20px"/>
+  <circle cx="100px" cy="100px" r="20px"/>
+  <circle cx="200px" cy="120px" r="15px"/>
+  <circle cx="130px" cy="315px" r="25px"/>
+  <circle cx="220px" cy="300px" r="20px"/>
 </svg>
+
+<div id="links">
+  <div>Use the links below to run the steps of the demo.</div>
+  <a href="#" onclick="first()">first</a>
+  <a href="#" onclick="second()">second</a>
+  <a href="#" onclick="third()">third</a>
+  <a href="#" onclick="fourth()">fourth</a>
+  <a href="#" onclick="fifth()">fifth</a>
+  <a href="#" onclick="sixth()">sixth</a>
+  <a href="#" onclick="seventh()">seventh</a>
+  <a href="#" onclick="eighth()">eighth</a>
+  <a href="#" onclick="ninth()">ninth</a>
+  <a href="#" onclick="tenth()">tenth</a>
+  <a href="#" onclick="eleventh()">eleventh</a>
+</div>
 
 <script src="web-animation.js"></script>
 <script>
@@ -113,27 +131,27 @@ limitations under the License.
 var a = undefined;
 
 function first() {
-	a = new Anim(document.querySelector(".doorSpacer"),
-		{ '-webkit-transform': [ 'rotateY(0deg)', 'rotateY(100deg)' ] }, 2);
+  a = new Animation(document.querySelector(".doorSpacer"),
+    { '-webkit-transform': [ 'rotateY(0deg)', 'rotateY(100deg)' ] }, 2);
 }
 
 function second() {
-	(new AnimTemplate({ cx: '400px' }, 3))
-		.animate(document.querySelectorAll("circle"));
+  (new AnimationTemplate({ cx: '400px' }, 3))
+    .animate(document.querySelectorAll("circle"));
 }
 
 // STEP 2
 
 function third() {
-	a.timing.timingFunc = new TimingFunc('ease-in');
-	a.play();
-	console.log(window.document.animationTimeline.currentState());	
+  a.timing.timingFunc = new TimingFunction('ease-in');
+  a.play();
+  console.log(window.document.animationTimeline.currentState());  
 }
 
 function fourth() {
-	a.timing.timingFunc = new TimingFunc([0, 0.2,0.8, 1]);
-	a.play();
-	console.log(window.document.animationTimeline.currentState());	
+  a.timing.timingFunc = new TimingFunction([0, 0.2,0.8, 1]);
+  a.play();
+  console.log(window.document.animationTimeline.currentState());  
 }
 
 // STEP 3
@@ -142,71 +160,71 @@ var group = undefined;
 var pictureTilting = undefined;
 
 function fifth() {
-	var picture = document.querySelector(".picture");
-	pictureTilting =
-		new Anim(picture,
-			{ '-webkit-transform': [ 'rotate(0deg)', 'rotate(-30deg)' ] }, 0.5);
-	group = new SeqAnimGroup([a, pictureTilting]);
-	console.log(window.document.animationTimeline.currentState());
+  var picture = document.querySelector(".picture");
+  pictureTilting =
+    new Animation(picture,
+      { '-webkit-transform': [ 'rotate(0deg)', 'rotate(-30deg)' ] }, 0.5);
+  group = new SeqGroup([a, pictureTilting]);
+  console.log(window.document.animationTimeline.currentState());
 }
 
 function sixth() {
-	var dust = document.querySelector(".dust");
-	var dustPuff = new Anim(dust, { opacity: ["0", "0.4", "0"] }, 0.3);
-	group.add(new ParAnimGroup([ pictureTilting, dustPuff ]));
-	group.play();
-	console.log(window.document.animationTimeline.currentState());
+  var dust = document.querySelector(".dust");
+  var dustPuff = new Animation(dust, { opacity: ["0", "0.4", "0"] }, 0.3);
+  group.add(new ParGroup([ pictureTilting, dustPuff ]));
+  group.play();
+  console.log(window.document.animationTimeline.currentState());
 }
 
 // STEP 4
 
 function audioAnimFunction() {
-	return {
+  return {
     sample: function(timeFraction, currentIteration, target) {
-			// TODO: fix this
-			console.log(timeFraction);
-		}
-	};
+      // TODO: fix this
+      console.log(timeFraction);
+    }
+  };
 }
 
 function seventh() {
-	var doorCreakAnim =
-		new Anim(null, new audioAnimFunction("CREEEEEEAAAAKKK"), 2);
-	var closeAnim = new ParAnimGroup([ a, doorCreakAnim ]);
-	closeAnim.timing.timingFunc = a.timing.timingFunc;
-	a.timing.timingFunc = null;
-	group.splice(0, 0, closeAnim);
-	group.play();
-	console.log(window.document.animationTimeline.currentState());
+  var doorCreakAnim =
+    new Animation(null, new audioAnimFunction("CREEEEEEAAAAKKK"), 2);
+  var closeAnim = new ParGroup([ a, doorCreakAnim ]);
+  closeAnim.timing.timingFunc = a.timing.timingFunc;
+  a.timing.timingFunc = null;
+  group.splice(0, 0, closeAnim);
+  group.play();
+  console.log(window.document.animationTimeline.currentState());
 }
 
 // STEP 5
 
 function eighth() {
-	document.querySelector(".right").style["visibility"] = "visible"
+  document.querySelector(".right").style["visibility"] = "visible"
 }
 
 var template = undefined;
 var door2 = undefined;
 
 function ninth() {
-	template = group.templatize();
+  template = group.templatize();
 
-	template.children[0].children[0].resolutionStrategy = "selector: .doorSpacer";
-	template.children[1].children[0].resolutionStrategy = "selector: .picture";
-	template.children[1].children[1].resolutionStrategy = "selector: .dust";
-	door2 = template.animateLive(document.querySelector(".right"));
+  template.children[0].children[0].resolutionStrategy = "selector: .doorSpacer";
+  template.children[1].children[0].resolutionStrategy = "selector: .picture";
+  template.children[1].children[1].resolutionStrategy = "selector: .dust";
+  door2 = template.animateLive(document.querySelector(".right"));
 }
 
 function tenth() {
-	group.play();
-	door2.play();
+  group.play();
+  door2.play();
 }
 
 function eleventh() {
-	template.timing.playbackRate = 2;
-	group.play();
-	door2.play();
+  template.timing.playbackRate = 2;
+  group.play();
+  door2.play();
 }
 </script>
 <script src="web-animation-visualization.js"></script>
