font-weight zero() is 0

--- a/test-font-weight.html
+++ b/test-font-weight.html
@@ -23,5 +23,5 @@ limitations under the License.
 <div style='font-family: Raleway; font-size: 75px; font-weight: 100' id=test>Testing font-weight!</div>
 <script src="web-animation.js"></script>
 <script>
-new Animation(document.querySelector('#test'), {'font-weight': [String(100), String(900)]}, { duration: 1, startDelay: 1 });
+new Animation(document.querySelector('#test'), {'font-weight': ['100', '900']}, { duration: 1, startDelay: 1 });
 </script>
