--- a/test-harness.html
+++ b/test-harness.html
@@ -18,27 +18,35 @@ var tests = [
   'test-calc.html',
   'test-change-playback-rate.html',
   'test-color.html',
+  'test-color-names.html',
   'test-composite-transforms.html',
   'test-compositor.html',
   'test-fill-values.html',
+  'test-font-weight.html',
   'test-grouped-anim-func.html',
+  'test-integer.html',
   'test-iterations-basic.html',
   'test-iterations-fill.html',
   'test-iteration-start.html',
   'test-keyframe-creation.html',
+  'test-length-units.html',
+  'test-non-numeric.html',
   'test-parent.html',
   'test-path.html',
   'test-pause.html',
   'test-playback-rate.html',
   'test-preset-timings.html',
+  'test-rectangle.html',
   'test-reparent.html',
   'test-seq-speed.html',
   'test-start-time.html',
   'test-start-time-iterations.html',
   'test-step.html',
   'test-svg-anim.html',
+  'test-text-shadow.html',
   'test-timing-functions.html',
   'test-to-animation.html',
+  'test-visibility.html',
 ];
 </script>
 <style>
