Update test-integer to fit within the test-harness

--- a/test-integer.html
+++ b/test-integer.html
@@ -16,6 +16,7 @@ limitations under the License.
 
 <!DOCTYPE html>
 <style>
+body { margin: 0px; }
 div { display: inline-block; }
 #test {
 width:800px;
