--- a/test/testcases/test-color-names.html
+++ b/test/testcases/test-color-names.html
@@ -169,5 +169,5 @@ var colors = [
   'yellowgreen'];
 
 new Animation(document.body, {'background-color': colors},
-    colors.length * 2 / 60);
+    colors.length * 2 / 60).attach();
 </script>
