--- a/test/testcases/test-font-weight.html
+++ b/test/testcases/test-font-weight.html
@@ -37,5 +37,5 @@ limitations under the License.
 <script src="../../web-animation.js"></script>
 <script>
 new Animation(document.querySelector('#test'), {'font-weight': ['100', '900']},
-    {duration: 1, startDelay: 1});
+    {duration: 1, startDelay: 1}).attach();
 </script>
