--- a/test/testcases/test-grouped-anim-func.html
+++ b/test/testcases/test-grouped-anim-func.html
@@ -34,6 +34,7 @@ limitations under the License.
 var rect = document.querySelector(".anim");
 
 new Animation(rect,
-    {x: "400px", y: ["300px", "200px"], width: ["100px", "20px", "50px"]}, 1);
+    {x: "400px", y: ["300px", "200px"], width: ["100px", "20px", "50px"]},
+    1).attach();
 
 </script>
