--- a/test/testcases/test-iteration-start.html
+++ b/test/testcases/test-iteration-start.html
@@ -161,5 +161,6 @@ for (var i = 0; i < containers.length; i++) {
       {left: ["100px", "180px"]},
       {duration: 1, iterationCount: 2.8, iterationStart: 0.2},
       groups[i]);
+  groups[i].attach();
 }
 </script>
