--- a/test/testcases/test-rectangle.html
+++ b/test/testcases/test-rectangle.html
@@ -39,5 +39,5 @@ var anim = {'clip': [
   'rect(0px, 800px, 600px, 0px)'
 ]};
 var timing = 1;
-new Animation(document.querySelector('#test'), anim, timing);
+new Animation(document.querySelector('#test'), anim, timing).attach();
 </script>
