--- a/test/testcases/test-text-shadow.html
+++ b/test/testcases/test-text-shadow.html
@@ -19,5 +19,6 @@ limitations under the License.
 <script src="../../web-animation.js"></script>
 <script>
 new Animation(document.body,
-    {'text-shadow': ['100px 100px red, 0px 100px 10px red', '0px 0px']}, 2);
+    {'text-shadow': ['100px 100px red, 0px 100px 10px red', '0px 0px']},
+    2).attach();
 </script>
