--- a/test/testcases/test-change-playback-rate.html
+++ b/test/testcases/test-change-playback-rate.html
@@ -38,6 +38,7 @@ limitations under the License.
 var a1 = new Animation(document.querySelector("#a"),
     {left: ["0px", "500px"]},
     {duration: 10, direction: 'alternating', iterationCount: Infinity});
+a1.attach();
 
 var a2 = new Animation(undefined,
     {sample: function(timeFraction, iteration, target) {
@@ -46,4 +47,5 @@ var a2 = new Animation(undefined,
       document.querySelector("#a").textContent = a1.timing.playbackRate;
     }},
     a1.timing.clone());
+a2.attach();
 </script>
