--- a/test/testcases/test-color.html
+++ b/test/testcases/test-color.html
@@ -60,13 +60,13 @@ All three boxes should end up the same color as the outline.
 <script>
 
 new Animation(document.querySelector("#a"),
-    {"background-color": ["red", "green"]}, 2);
+    {"background-color": ["red", "green"]}, 2).attach();
 new Animation(document.querySelector("#b"), 
-    {"background-color": "rgb(0, 128, 0)"}, 2);
+    {"background-color": "rgb(0, 128, 0)"}, 2).attach();
 new Animation(document.querySelector("#c"), {"background-color": [
   {offset: 0.25, value: "rgb(255, 0, 0)"},
   {offset: 0.75, value: "rgb(0, 0, 255)"}
-], operation: "add"}, 2);
+], operation: "add"}, 2).attach();
 
 
 </script>
