--- a/test/testcases/test-compositor.html
+++ b/test/testcases/test-compositor.html
@@ -37,25 +37,25 @@ limitations under the License.
 var rect = document.querySelector(".anim")
 var rect2 = document.querySelector(".anim2")
 
-new Animation(rect, {x: ["0px", "400px"]}, 3);
+new Animation(rect, {x: ["0px", "400px"]}, 3).attach();
 new Animation(rect, {x: ["0px", "200px"], operation: 'add'},
-    {startDelay: 1, duration: 4});
+    {startDelay: 1, duration: 4}).attach();
 new Animation(rect, {x: ["0px", "200px"], operation: 'merge'},
-    {startDelay: 2, duration: 5});
+    {startDelay: 2, duration: 5}).attach();
 
 new Animation(rect2,
     {"-webkit-transform": ["translate(0px, 0px)", "translate(200px, 200px)"]},
-    3);
+    3).attach();
 new Animation(rect2,
     {"-webkit-transform": [
       "rotate(0deg) translate(0px, 0px)", 
       "rotate(90deg) translate(100px, 0px)"
     ], operation: 'add'},
-    {startDelay: 1, duration: 4});
+    {startDelay: 1, duration: 4}).attach();
 new Animation(rect2,
     {"-webkit-transform": [
       "translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(1, 1)", 
       "translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(2, 2)"
     ], operation: 'merge'},
-    {startDelay: 2, duration: 5});
+    {startDelay: 2, duration: 5}).attach();
 </script>
