--- a/test/testcases/test-iterations-basic.html
+++ b/test/testcases/test-iterations-basic.html
@@ -110,5 +110,6 @@ for (var i = 0; i < containers.length; i++) {
   new Animation(container.getElementsByClassName("c")[0],
       {left: ["180px", "300px"]}, {duration: 1, iterationCount: 0.0},
       groups[i]);
+  groups[i].attach();
 }
 </script>
