--- a/test/testcases/test-iterations-fill.html
+++ b/test/testcases/test-iterations-fill.html
@@ -123,6 +123,8 @@ function sampleFunc(timeFraction, iteration, target) {
   target.innerHTML = Math.floor(timeFraction * 1000) / 1000 + " : " + iteration;
 }
 
+// We only hit the bug when running both fill modes 0 and 1?!
+// ie first and second div in first block
 for (var i = 0; i < fillModes.length; i++) {
   var divs = document.querySelectorAll(categories[i]);
   for (var j = 0; j < divs.length; j++) {
@@ -140,6 +142,9 @@ for (var i = 0; i < fillModes.length; i++) {
       fillMode: fillModes[i],
       playbackRate: 0.8
     }, groups[j], 1);
+    if (i == fillModes.length - 1) {
+      groups[j].attach();
+    }
   }
 }
 </script>
