--- a/test/testcases/test-non-numeric.html
+++ b/test/testcases/test-non-numeric.html
@@ -31,5 +31,5 @@ body {
 <script>
 new Animation(document.querySelector('#test'),
     {'display': ['none', 'block', 'none', 'block', 'none', 'block', 'none']},
-    0.5);
+    0.5).attach();
 </script>
