--- a/test/testcases/test-parent-is-self.html
+++ b/test/testcases/test-parent-is-self.html
@@ -59,19 +59,7 @@ var check = function(actual, expected, failureMessage) {
 var elem = document.getElementById("anim");
 var animFunc = {left: "100px"};
 
-// Test that we can reparent from the default group.
-var child1 = new Animation(elem, animFunc);
-var child2 = new Animation(elem, animFunc);
-var parent = new ParGroup(document.animationTimeline.children);
-check(parent.parentGroup, document.animationTimeline,
-    "Parent's parent should be default group");
-check(parent.children.length, 2, "Parent should have 2 children");
-check(parent.children[0], child1, "Unexpected first child");
-check(parent.children[1], child2, "Unexpected second child");
-check(child1.parentGroup, parent, "First child's parent incorrect");
-check(child2.parentGroup, parent, "Sceond child's parent incorrect");
-
-// Test general case of inserting a group between a parent and its children.
+// Test inserting a group between a parent and its children.
 var parent = new ParGroup();
 var child1 = new Animation(elem, animFunc, 1.0, parent);
 var child2 = new Animation(elem, animFunc, 1.0, parent);
