--- a/test/testcases/test-timing-functions.html
+++ b/test/testcases/test-timing-functions.html
@@ -52,11 +52,12 @@ body { margin: 0px; }
 <script>
 
 new Animation(document.querySelector("#a"), {left: "200px"},
-    {startDelay: 1, duration: 2});
+    {startDelay: 1, duration: 2}).attach();
 var elems = document.querySelectorAll(".test");
 for (var i = 0; i < elems.length; i++) {
   var element = elems[i];
-  new Animation(element, {left: "200px"},
+  var anim = new Animation(element, {left: "200px"},
       {startDelay: 1, duration: 2, timingFunction: element.textContent});
+  anim.attach();
 }
 </script>
