--- a/web-animation-test.html
+++ b/web-animation-test.html
@@ -76,7 +76,7 @@ limitations under the License.
 <script>
 
 new Anim(document.querySelector(".anim"), {left: ["100px", "200px"]},
-    {startDelay: 2, duration: 4}, undefined, 1);
+    {startDelay: 2, duration: 4}, undefined, 1).attach();
 
 
 var up = new AnimTemplate({top: ["200px", "0px"]}, 1, "selector: .top");
