Use textContent instead of innerText

--- a/test-change-playback-rate.html
+++ b/test-change-playback-rate.html
@@ -43,7 +43,7 @@ var a2 = new Animation(undefined,
     {sample: function(timeFraction, iteration, target) {
       a1.changePlaybackRate(0.01 + 10 * timeFraction);
       a2.changePlaybackRate(0.01 + 10 * timeFraction);
-      document.querySelector("#a").innerText = a1.timing.playbackRate;
+      document.querySelector("#a").textContent = a1.timing.playbackRate;
     }},
     a1.timing.clone());
 </script>
