--- a/test/testcases/test-clone.html
+++ b/test/testcases/test-clone.html
@@ -64,14 +64,12 @@ var elem = document.getElementById("anim");
 var animFunc = {left: "100px"};
 
 // Animation
-var anim = new Animation(elem, animFunc, 1.0, null, 2.0);
+var anim = new Animation(elem, animFunc, 1.0, undefined, 2.0);
 var clone = anim.clone();
 check(clone instanceof Animation, true, "Clone should be an Animation");
 check(clone.timing.duration, 1.0, "Clone should take Timing.duration");
 check(clone.targetElement, elem, "Clone should take targetElement");
 checkNotEqual(clone.startTime, 2.0, "Clone should not take startTime");
-check(clone.parentGroup, document.animationTimeline,
-    "Clone should not take parentGroup");
 
 /*
 TODO: Reinstate pause functionality.
@@ -85,7 +83,7 @@ check(clone.iterationTime, 0.2, "Clone should have own iterationTime");
 */
 
 // ParGroup
-var parGroup = new ParGroup([anim, clone], 4.0, null, 3.0);
+var parGroup = new ParGroup([anim, clone], 4.0, undefined, 3.0);
 var parGroupClone = parGroup.clone();
 check(parGroupClone instanceof ParGroup, true,
     "ParGroup clone should be a ParGroup");
@@ -102,8 +100,6 @@ check(parGroupClone.children[1].duration, 1.0,
     "ParGroup clone should clone first child");
 checkNotEqual(parGroupClone.startTime, 3.0,
     "ParGroup clone should not take startTime");
-check(parGroupClone.parentGroup, document.animationTimeline,
-    "ParGroup clone should not take parentGroup");
 
 /*
 TODO: Reinstate pause functionality.
@@ -119,7 +115,7 @@ check(parGroupClone.iterationTime, 0.4,
 */
 
 // SeqGroup
-var seqGroup = new SeqGroup([anim, clone], 6.0, null, 5.0);
+var seqGroup = new SeqGroup([anim, clone], 6.0, undefined, 5.0);
 var seqGroupClone = seqGroup.clone();
 check(seqGroupClone instanceof SeqGroup, true,
     "SeqGroup clone should be a SeqGroup");
@@ -136,8 +132,6 @@ check(seqGroupClone.children[1].duration, 1.0,
     "SeqGroup clone should clone first child");
 checkNotEqual(seqGroupClone.startTime, 5.0,
     "SeqGroup clone should not take startTime");
-check(seqGroupClone.parentGroup, document.animationTimeline,
-    "SeqGroup clone should not take parentGroup");
 
 /*
 TODO: Reinstate pause functionality.
@@ -155,7 +149,7 @@ check(seqGroupClone.iterationTime, 0.6,
 // Child
 var childClone = anim.clone();
 check(anim.parentGroup, seqGroup);
-check(childClone.parentGroup, document.animationTimeline,
+check(childClone.parentGroup, null,
     "Child clone should not take parentGroup");
 
 </script>
